src/styles/index.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  scroll-behavior: smooth;
}

@font-face {
  font-family: "Instrument Serif Italic";
  src: local("InstrumentSerif-Italic"), url("/fonts/InstrumentSerif/InstrumentSerif-Italic.ttf");
}

@font-face {
  font-family: "Poppins Bold";
  src: local("Poppins-Bold"), url("/fonts/Poppins/Poppins-Bold.ttf");
}

@font-face {
  font-family: "Poppins SemiBold";
  src: local("Poppins-SemiBold"), url("/fonts/Poppins/Poppins-SemiBold.ttf");
}

a {
  
  font-weight: 500;
  text-decoration: inherit;
}

html, body, #root {
  margin: 0;
  min-width: 320px;
  height: 100%;
  background-color: white;
}

h1 {
  font-family: "Instrument Serif Italic", serif;
  font-size: 3.2em;
  line-height: 1.1;
}

h2 {
  font-family: "Poppins Bold", sans-serif;
  font-size: 2em;
  line-height: 1.2;
  text-decoration-line: underline;
  text-decoration-color: #EEBB2F;
}

h3 {
  font-family: "Poppins SemiBold", sans-serif;
  font-size: 1.4em;
  line-height: 1.3;
}

h4 {
  font-family: "Poppins SemiBold", sans-serif;
  font-size: 1.2em;
  line-height: 1.3;
}

p, li, button, a, b {
  font-family: "Calibri", sans-serif;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  /* a:hover {
    color: #f9f9f9;
  } */
  button {
    background-color: #f9f9f9;
  }
}

